tests/ui/use/use-mod/use-mod-4.stderr
error[E0432]: unresolved import `crate::foo`
  --> $DIR/use-mod-4.rs:1:12
   |
LL | use crate::foo::self;
   |            ^^^ use of unresolved module or unlinked crate `foo`
   |
help: you might be missing a crate named `foo`, add it to your project and import it in your code
   |
LL + extern crate foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
