tests/ui/use/use-mod/use-mod-4.rs
use crate::foo::self; //~ ERROR unresolved import `crate::foo`

use std::mem::self;

fn main() {}
